# OpenBacklog

./: .dockerignore  .env.cluster-dev  .env.development  .env.example  .env.test  .gitignore  .gitleaksignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  alembic.ini  docker-compose.yml  manage.py  package-lock.json  package.json  postgrest.dev.conf  postgrest.test.conf  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  tailwind.config.js  webpack.config.js
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: bandit.yml  gitleaks.yml  pr-hygiene.yml  python-tests.yml  typescript-tests.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
alembic/: env.py
alembic/versions/: 03d99010e3d0_safe_trigger_update_user_key_last_used.py  07c6d6036168_invalidate_access_token.py  07fb5fd1eb0a_update_get_user_id_from_jwt.py  122d98e56e8c_initiative_delete_cascade.py  1623674e8a8a_get_user_from_jwt_to_private.py  165d1c91bd7b_product_strategy_identifiers.py  16c078217323_chat_modes.py  1aeb37e5886c_add_orderings_table.py  1c3f36ec02bf_initiative_groups.py  32795b3b5f76_add_context_document.py  33de8a75753d_user_api_keys.py  33ed869554e2_token_deleted_at.py  34e11907e5f4_next_billing_cycle_starts.py  3bcc0b621841_openbacklog_mcp_client_key.py  3d9b35a13bd1_identifier_function_fix.py  40c8f769b104_user_profile_picture.py  43e0a986ef50_ordering_relationships.py  44fb652b2515_resolved_job.py  45d4effd70c7_add_litellm_enum.py  46c1780ab415_user_password_nullable.py  4ad1dd0bfa19_github_installation_constraint.py  4dc40be08149_thread_id.py  4f25dc97c12b_create_domain_events_table.py  55e07bbddf93_remove_initiative_and_task_order.py  5ae7f69b22ae_mcp_token_storage.py  5bfdc54202cf_subscription_billing_fsm_states.py  5f3bdb885432_update_links_to_new_narrative_models.py  610afe0fa470_subscription_legder_source.py  6c61afaa1e50_github_installations_cascade_delete.py  70115a3aa83f_field_length_constraints.py  716d67a6b822_add_billing_state_machine_transitions.py  76b244695258_remove_initiative_group_position.py  78544b52554c_expand_access_token_length.py  786119209325_role_permissions_post_orderings.py  7bf0ed5e8056_github_installation_delete_cascade.py  7ca2bbe29eed_add_ledger.py  800920ba0972_remove_duplicate_enum.py  8602870427dc_subscription_fsm_transitions.py  8751db1a83f8_add_workspace_model_and_relationships.py  888b65665436_remove_billing_model_ledger.py  (+27 more)
browser_functional_tests/: conftest.py  test_api_key_management.py  test_basic_ai_improvments.py  test_billing.py  test_initiative_and_task_management.py  test_mcp_server.py  test_onboarding_flow.py  test_ordering.py  test_postgrest.py
config/litellm/: config.yaml
config/nginx/: Dockerfile  nginx.conf  sentry_tunnel.lua
config/postgrest/: auth0.jwks.json
datasets/: gold.jsonl
docker/: background_service.Dockerfile  docker-compose.yml  fastapi.Dockerfile  jupyter.Dockerfile  litellm.Dockerfile  mcp_server.Dockerfile  nginx.Dockerfile  nginx.conf  nginx.conf.template  postgres-init.sql  postgres.Dockerfile  postgrest.Dockerfile  redis-entrypoint.sh  redis-init.sh  redis.Dockerfile  redis.conf  start.sh  unified_background_worker.Dockerfile  usage_sync_service.Dockerfile  vault-dev.hcl  vault-preprod.hcl  vault-prod.hcl  vault.Dockerfile
docs/: MCP_SETUP.md
evals/: agent_evaluator.py
git-hooks/: find_large_files_in_commit.sh
scripts/: backup-cluster-db.sh  bootstrap_blank_database.sh  bootstrap_blank_test_database.sh  bootstrap_blank_test_database_parallel.sh  build_static_files.sh  build_static_files_preprod.sh  build_static_files_prod.sh  create_dev_jwt.py  discover_test_files.py  generate-vault-certs.sh  list-clusters.sh  logs-cluster.sh  rebuild-cluster.sh  render_environment_manager.py  restore-cluster-db.sh  run_ai_jobs_processor.py  run_all.sh  run_end_to_end_tests.py  run_frontend_tests.sh  run_linter.sh  run_mutation_tests.sh  run_mutation_tests_optimized.sh  run_mutation_worker.py  run_parallel_mutation_tests.sh  run_parallel_tests.sh  run_postgrest.sh  run_storybook_tests.sh  run_test_postgrest.sh  run_test_worker.py  run_tests.sh  run_type_checker.sh  setup-cluster.sh  setup-hosts.sh  shell-cluster.sh  start-cluster.sh  stop-cluster.sh
src/: api.py  api_key_views.py  background_service.py  config.py  controller.py  db.py  dev_main.py  error_views.py  key_vault.py  litellm_service.py  main.py  models.py  schemas.py  storage_service.py  users_views.py
src/accounting/: accounting_controller.py  accounting_views.py  billing_command_handlers.py  billing_events.py  billing_query_service.py  billing_service.py  billing_state_machine.py  billing_state_reconstructor.py  billing_transitions.py  event_store.py  finite_state_machine.mmd  generate_fsm_diagram.py  llm_cost_estimator.py  (+5 more)
templates/: macros.html  tailwindui_head.html
tests/: conftest.py  test_api.py  test_app_lifespan.py  test_auth.py  test_background_service.py  test_config.py  test_controller.py  test_controller_api_key.py  test_controller_openbacklog_tokens.py  test_db.py  test_error_views.py  test_get_user_id_from_jwt.py  test_jwt_utils.py  test_key_vault.py  test_litellm_service.py  test_management_cli.py  test_models.py  test_render_environment_manager.py  test_storage_service.py  test_vault_operations.py  test_views.py  test_workspace_api.py  test_workspace_controller.py  test_workspace_lifecycle.py
(+914 files in other folders)
